--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
 			<artifactId>junit-vintage-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>net.sourceforge.htmlunit</groupId>
+		    <artifactId>htmlunit</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
